syntax = "proto3";

package sdc.addressing;

import "google/protobuf/any.proto";

option java_multiple_files = true;
option java_package = "org.somda.sdc.proto.model.addressing";
option java_outer_classname = "AddressingTypes";

message Addressing {
  repeated google.protobuf.Any extension = 1;
  string action = 2;
  string message_id = 3;
  string relates_id = 4;
  string to = 5;
}

message EndpointReference {
  repeated google.protobuf.Any extension = 1;
  string address = 2;
}