syntax = "proto3";

package sdc.discovery;

import "google/protobuf/any.proto";
import "sdc/addressing/addressing_types.proto";
import "sdc/common/common_types.proto";
import "sdc/discovery/discovery_types.proto";

option java_package = "org.somda.sdc.proto.model.discovery";
option java_outer_classname = "DiscoveryMessages";

message AnyDiscoveryMessage {
  repeated google.protobuf.Any extension = 1;

  oneof type {
    Hello hello = 2;
    Bye bye = 3;
    Probe probe = 4;
    ProbeMatches probe_matches = 5;
    Resolve resolve = 6;
    ResolveMatches resolve_matches = 7;
    GetHost get_host = 8;
    GetHostResponse get_host_response = 9;
  }
}

message Hello {
  repeated google.protobuf.Any extension = 1;
  sdc.addressing.Addressing addressing = 2;
  AppSequence app_sequence = 3;
  Endpoint endpoint = 4;
}

message Bye {
  repeated google.protobuf.Any extension = 1;
  sdc.addressing.Addressing addressing = 2;
  AppSequence app_sequence = 3;
  Endpoint endpoint = 4;
}

message Probe {
  repeated google.protobuf.Any extension = 1;
  sdc.addressing.Addressing addressing = 2;

  // types are left out intentionally as they are conceptually blurry
  // and not required from the discovery point of view
  ScopeMatcher scopes_matcher = 3;
}

message ProbeMatches {
  repeated google.protobuf.Any extension = 1;
  sdc.addressing.Addressing addressing = 2;
  repeated Endpoint endpoint = 3;
}

message Resolve {
  repeated google.protobuf.Any extension = 1;
  sdc.addressing.Addressing addressing = 2;
  sdc.addressing.EndpointReference endpoint_reference = 3;
}

message ResolveMatches {
  repeated google.protobuf.Any extension = 1;
  sdc.addressing.Addressing addressing = 2;
  Endpoint endpoint = 3;
}

message Fault {
  repeated google.protobuf.Any extension = 1;
  sdc.addressing.Addressing addressing = 2;
  sdc.common.QName code = 3;
  sdc.common.QName subCode = 4;
  string reason = 5;
}

message GetHost {
  repeated google.protobuf.Any extension = 1;
}

message GetHostResponse {
  repeated google.protobuf.Any extension = 1;

  sdc.addressing.EndpointReference endpoint_reference = 2;
  DeviceMetadata metadata = 3;
  repeated HostedService hosted_service = 4;
}